still have to fix sprites